# oai-transcribe

./: .gitignore  README.md  dictation_service.py  fastapi_server.py  formatting.py  index.html  main.py  pyproject.toml  pyproject.toml.bak  server.py  settings.py  simple_server.py  tts.html  tts_service.py  utils.py
