[project]
name = "oai-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "numpy>=1.24.0",
    "openai>=1.107.0",
    "openai-agents>=0.2.11",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "resampy>=0.4.3",
    "sounddevice>=0.5.2",
    "soundfile>=0.12.0",
    "uvicorn[standard]>=0.30.0",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
